--- a/curriculo.html
+++ b/curriculo.html
@@ -15,7 +15,7 @@
 
             <a class="cabecalho-menu-links" href="sobremim.html">Sobre mim</a>
 
-            <a class="cabecalho-menu-links" href="curriculo.html">Curriculo</a>
+            <a class="cabecalho-menu-links" href="curriculo.html">Currículo</a>
 
 
         </nav>
@@ -23,15 +23,15 @@
 
     <main class="conteudo">
         <section class="apresentacao-conteudo">
-            <h1 class="apresentacao-conteudo-titulo">Curriculo</h1>
+            <h1 class="apresentacao-conteudo-titulo">Currículo</h1>
             <p>     
 
-                <li class="apresentacao-conteudo-texto" >Ana Karolina Cavalcante da Silva</li>
-                <li class="apresentacao-conteudo-texto" >Endereço: Rua Dr. Loiola, Vila Tibério</li>
-                <li class="apresentacao-conteudo-texto" >CEP: 14050-070</li>
-                <li class="apresentacao-conteudo-texto" >Cidade: Ribeirão Preto-SP</li>
-                <li class="apresentacao-conteudo-texto" >Telofone de contatao: (16) 98162-9704</li>
-                <li class="apresentacao-conteudo-texto" >Email: anakarolinacavalcantesilva@gmail.com</li>
+                <li class="apresentacao-conteudo-texto" >Ana Karolina Cavalcante da Silva.</li>
+                <li class="apresentacao-conteudo-texto" >Endereço: Rua Dr. Loiola, Vila Tibério.</li>
+                <li class="apresentacao-conteudo-texto" >CEP: 14050-070.</li>
+                <li class="apresentacao-conteudo-texto" >Cidade: Ribeirão Preto-SP.</li>
+                <li class="apresentacao-conteudo-texto" >Telofone de contatao: (16) 98162-9704.</li>
+                <li class="apresentacao-conteudo-texto" >Email: anakarolinacavalcantesilva@gmail.com.</li>
 
             </p>
             <p class="apresentacao-conteudo-texto"> </li></li>
@@ -42,12 +42,10 @@
                     <li>Em busca de experiências profissionais</li>
                 </ul>
             </p>
-            <h2 class="apresentacao-conteudo-titulo">Qualificação Profissional</h2>
+            <h2 class="apresentacao-conteudo-titulo">Formação Acadêmica</h2>
            <div class="apresentacao-conteudo-texto">
             <ul class="apresentacao-conteudo-texto">
-                <li>Curso tal <a href="linkdocertificado">com certificado</a> </li>
-                <li>Curso tal <a href="linkdocertificado">com certificado</a></li>
-                <li>Curso tal <a href="linkdocertificado">com certificado</a></li>
+                <li>Ensino médio completo </li>
             </ul>
             </div>    
         </section>
@@ -59,4 +57,5 @@
     </footer>
     
 </body>
+<br><br>
 </html>
