--- a/curriculo.html
+++ b/curriculo.html
@@ -30,7 +30,7 @@
                 <li class="apresentacao-conteudo-texto" >Endereço: Rua Dr. Loiola, Vila Tibério.</li>
                 <li class="apresentacao-conteudo-texto" >CEP: 14050-070.</li>
                 <li class="apresentacao-conteudo-texto" >Cidade: Ribeirão Preto-SP.</li>
-                <li class="apresentacao-conteudo-texto" >Telofone de contatao: (16) 98162-9704.</li>
+                <li class="apresentacao-conteudo-texto" >Telofone: (16) 98162-9704.</li>
                 <li class="apresentacao-conteudo-texto" >Email: anakarolinacavalcantesilva@gmail.com.</li>
 
             </p>
@@ -39,13 +39,19 @@
             <h2 class="apresentacao-conteudo-titulo">Experiências</h2>
             <p class="apresentacao-conteudo-texto">
                 <ul class="apresentacao-conteudo-texto">
-                    <li>Em busca de experiências profissionais</li>
+                    <li>Balzac Massas - Auxiliar de Produção (meio período)            
+                        (2021) </li>
                 </ul>
             </p>
             <h2 class="apresentacao-conteudo-titulo">Formação Acadêmica</h2>
            <div class="apresentacao-conteudo-texto">
             <ul class="apresentacao-conteudo-texto">
-                <li>Ensino médio completo </li>
+                <li>Ensino médio completo (2023) </li>
+
+                <li>Escolas Remington - Práticas Bancárias e Financeira (2022)
+                </li>
+                <li>Segurança no Mundo Digital  - NovoTec Expresso (2022)</li>
+                <li>Marketing Digital e Vendas Online - NovoTec Expresso (2023)</li>
             </ul>
             </div>    
         </section>
@@ -58,4 +64,6 @@
     
 </body>
 <br><br>
+<br><br>
+
 </html>
