--- a/curriculo.html
+++ b/curriculo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculo</title>
+    <title>Currículo</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
@@ -24,34 +24,33 @@
     <main class="conteudo">
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo">Currículo</h1>
-            <p>     
+            <p> 
+                <ul>   
 
                 <li class="apresentacao-conteudo-texto" >Ana Karolina Cavalcante da Silva.</li>
                 <li class="apresentacao-conteudo-texto" >Endereço: Rua Dr. Loiola, Vila Tibério.</li>
                 <li class="apresentacao-conteudo-texto" >CEP: 14050-070.</li>
                 <li class="apresentacao-conteudo-texto" >Cidade: Ribeirão Preto-SP.</li>
-                <li class="apresentacao-conteudo-texto" >Telofone: (16) 98162-9704.</li>
+                <li class="apresentacao-conteudo-texto" >Telofone de contatao: (16) 98162-9704.</li>
                 <li class="apresentacao-conteudo-texto" >Email: anakarolinacavalcantesilva@gmail.com.</li>
-
+            </ul> 
             </p>
             <p class="apresentacao-conteudo-texto"> </li></li>
             </p>
             <h2 class="apresentacao-conteudo-titulo">Experiências</h2>
             <p class="apresentacao-conteudo-texto">
                 <ul class="apresentacao-conteudo-texto">
-                    <li>Balzac Massas - Auxiliar de Produção (meio período)            
-                        (2021) </li>
+                    <li>Em busca de experiências profissionais.</li>
                 </ul>
             </p>
             <h2 class="apresentacao-conteudo-titulo">Formação Acadêmica</h2>
            <div class="apresentacao-conteudo-texto">
             <ul class="apresentacao-conteudo-texto">
-                <li>Ensino médio completo (2023) </li>
-
-                <li>Escolas Remington - Práticas Bancárias e Financeira (2022)
-                </li>
-                <li>Segurança no Mundo Digital  - NovoTec Expresso (2022)</li>
-                <li>Marketing Digital e Vendas Online - NovoTec Expresso (2023)</li>
+                <li>Ensino médio completo. </li>
+                <li>Práticas Bancárias e Financeiras - Escolas Remington (2022). </li>
+                <li>Segurança no mundo digital - NovoTec Expresso (2022).</li>
+                <li>Marketing digital e vendas online - NovoTec Expresso (2023).</li>
+                <li>Desenvolvimento de software - Front-end - NovoTec Expresso (2023).</li>
             </ul>
             </div>    
         </section>
@@ -64,6 +63,4 @@
     
 </body>
 <br><br>
-<br><br>
-
 </html>
